# pd_homeworks

./: .gitignore  README.md
homework1/: CMakeLists.txt  experiment.py  experiment_conf.py  requirements.txt  start.sh
homework1/env/: pip-selfcheck.json
homework1/scripts/: build.sh  setup_venv.sh  tmp_sbatch_config.sh
homework1/src/: main.cpp
homework2/: CMakeLists.txt  run.sh
homework2/include/: CommonKernels.cuh  Helpers.cuh  KernelMatrixAdd.cuh  MatrixMul.cuh  Utils.cuh
homework2/runners/: 01-add.cu  02-mul.cu  03-matrix-add.cu  04-matrix-vector-mul.cu  05-scalar-mul.cu  06-cosine-vector.cu
homework2/src/: CommonKernels.cu  CosineVector.cu  Helpers.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu  Utils.cu
